--- a/element.html
+++ b/element.html
@@ -17,13 +17,17 @@
 	
 	<style>
 		.card {
-		border: none;
-		padding: 5% 0 2% 0;
-		line-height: 150%;
+			border: none;
+			padding: 3% 15%;
+			line-height: 150%;
 		}
 		
 		.h3 {
 			letter-spacing: 4px;
+		}
+		
+		p {
+			text-align: justify;
 		}
 	
 	
@@ -100,12 +104,23 @@
 	</div>
  </div>
  
+ 
+ 
+ <hr width="70%">
+ 
  <!---------		content 2		---------->
  <section>
- 
- 
- 
- 
+ <div class="card">
+ <div class="container">
+	<h3 class="h3 card-title text-info font-weight-bold">Lorem Ipsum</h3>
+	<h4 class="h4 card-subtitle text-info font-weight-bold">Lorem Ipsum</h4>
+	<p class="card-text text-muted">
+		Lorem <span class="font-weight-bold">ipsum</span> dolor sit <span class="font-weight-bolder">amet</span>, <span class="font-italic">consectetur</span> adipiscing elit, 
+		sed do <span class="font-weight-light">eiusmod</span> tempor <span class="text-capitalize">incididnt</span> ut labore <sup>et dolore</sup> magna <sub>aliqua</sub>.
+		<small>Ut enim ad minim</small> veniam, quis <s>nostrud</s> exercitation <u>ullamco laboris</u> nisi ut aliquip ex ea <span class="text-nowrap bg-secondary text-monospace text-light"style="display: inline-block;">commodo consequat</span>.
+	</p>
+</div>
+ </div>
  </section>
   
 </body>
