push content 4 element.html

--- a/element.html
+++ b/element.html
@@ -123,5 +123,26 @@
  </div>
  </section>
   
+  <hr width="70%">
+  
+  <!-------------		content 3		------------>
+<section>
+	<div class="card">
+		<div class="container">
+			<h1 class="h1 text-info font-weight-bold">Heading class 1</h1>
+			<h2 class="h2 text-info font-weight-bold">Heading class 2</h2>
+			<h3 class="h3 text-info font-weight-bold">Heading class 3</h3>
+			<h4 class="h4 text-info font-weight-bold">Heading class 4</h4>
+			<h5 class="h5 text-info font-weight-bold">Heading class 5</h5>
+			<h6 class="h6 text-info font-weight-bold">Heading class 6</h6>
+		</div>
+	</div>
+</section>
+
+
+<hr width="70%">
+
+
+<!--------------		content 4		------------>
 </body>
 </html>
